// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog snapshot default 1`] = `
<div
  class="component shadow-sm paddingDefault"
  data-test="Dialog"
>
  <div
    class="content"
  >
    content
  </div>
</div>
`;

exports[`Dialog snapshot inline context 1`] = `
<div
  class="component contextInline paddingDefault"
  data-test="Dialog"
>
  <div
    class="content"
  >
    content
  </div>
</div>
`;

exports[`Dialog snapshot no content padding 1`] = `
<div
  class="component shadow-sm"
  data-test="Dialog"
>
  <div
    class="content"
  >
    content
  </div>
</div>
`;

exports[`Dialog snapshot title + both buttons 1`] = `
<div
  class="component shadow-sm paddingDefault"
  data-test="Dialog"
>
  <div
    class="title"
  >
    <h4
      class="component text-lg font-medium"
    >
      Title
    </h4>
  </div>
  <div
    class="content"
  >
    content
  </div>
  <div
    class="chin"
    data-test="Dialog-chin"
  >
    <button
      class="component rounded border-solid border gap-x-2 whitespace-nowrap font-aeonik
      antialiased text-center text-sm no-underline cursor-pointer focus:outline-0
      disabled:cursor-default disabled:pointer-events-none disabled:opacity-50
      transition duration-200 px-3 py-1 bg-white border-black text-black font-normal
                    disabled:bg-white disabled:border-gray-700 disabled:text-gray-700
                    hover:bg-gtmblue-100 hover:border-gtmblue-500 hover:text-gtmblue-500"
      data-test="Dialog-secondaryButton"
      type="button"
    >
      Cancel
    </button>
    <button
      class="component rounded border-solid border gap-x-2 whitespace-nowrap font-aeonik
      antialiased text-center text-sm no-underline cursor-pointer focus:outline-0
      disabled:cursor-default disabled:pointer-events-none disabled:opacity-50
      transition duration-200 px-3 py-1 bg-black border-black text-white font-normal
                  disabled:bg-gray-400 disabled:border-gray-400 disabled:text-gray-700
                  hover:bg-gtmblue-500 hover:border-gtmblue-500"
      data-test="Dialog-primaryButton"
      type="button"
    >
      Save
    </button>
  </div>
</div>
`;
